--- a/SFCommonMarkTools.Tests/SFCommonMarkTools.Tests.fsproj
+++ b/SFCommonMarkTools.Tests/SFCommonMarkTools.Tests.fsproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <Compile Include="Tests.fs" />
+    <Compile Include="BlockTests.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
 
